bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:4: error: value ||! is not a member of Boolean
  if (weekday||!vacation)
             ^